--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# exclude everything
 dist/*
+
+# exception to the rule
+!dist/.gitkeep 
 
 # Runtime data
 pids
